Added project page

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -11,4 +11,4 @@
 <body>
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="/help">help</a>
+    <a href="/projects">Projects</a>
